--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     url: jdbc:mysql://localhost:3306/News?characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false
     username: root
     #    change the password to your own mysql password
-    password: 123456789
+    password: 123456
   jpa:
     hibernate:
       ddl-auto: update
